fix spacing issues with list... and nested list like with the dopey weekend stats/results

--- a/source/stylesheets/base/_lists.scss
+++ b/source/stylesheets/base/_lists.scss
@@ -1,6 +1,7 @@
 ul,
 ol {
   margin: 0;
+  margin-bottom: $base-spacing / 2;
   padding: 0;
   list-style-type: none;
 
@@ -28,4 +29,8 @@ dl {
   dd {
     margin: 0;
   }
+}
+
+li > ul {
+  margin-bottom: 0;
 }
